--- a/public/index.html
+++ b/public/index.html
@@ -55,5 +55,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7QW21LHKGJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7QW21LHKGJ");
+    </script>
   </body>
 </html>
