Ajout quelques configuration:

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,37 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo_circle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#333" />
+    <meta name="theme-color" content="#b781ff" />
     <meta name="description" content="Application pour genérer vos pages" />
+    <meta name="title" content="Tingepage" />
+    <meta
+      name="description"
+      content="Générer vos pages de garde en quelques secondes sans vous soucier du design. Une application pour étudiants et élèves."
+    />
+    <meta
+      name="keywords"
+      content="page,ting, tingpage, design, generator, student,étudiant, élève, ucb , université, école, magazine, innovation, RDC, congo,technologier RDC, numérique, kivu tech"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="French" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="author" content="Aksanti Bahiga Tacite" />
+
+    <!-- Open Graph data -->
+
+    <meta
+      property="og:title"
+      content="TIng page | Générez des pages de garde en seul clic"
+    />
+    <meta property="og:type" content="https://tingpage.xyz" />
+    <meta property="og:url" content="https://tingpage.xyz" />
+    <meta property="og:image" content="./logo_circle.png" />
+    <meta
+      property="og:description"
+      content="Une application qui vous génère des pages de garde en seul clic"
+    />
+
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!--
@@ -43,14 +72,19 @@
     </style>
   </head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-66N67GC46X"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-66N67GC46X"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  gtag('config', 'G-66N67GC46X');
-</script>
+    gtag("config", "G-66N67GC46X");
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
